修改广州新增的两个账户的试图mwd和mwd2

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd/JsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd/JsApi.cshtml
@@ -35,13 +35,13 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1667359354378253");
+        })(window, document, "script", "1661318015460365");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/xdd2/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
+        <a href="/webapp/mwd/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
         <h1>号码订购</h1>
     </div>
     <div class="weui-cells__title">
@@ -148,7 +148,7 @@
                             if (address) {
                                 $.ajax({
                                     type: "post",
-                                    url: "/webapp/xdd2/JsApi",
+                                    url: "/webapp/mwd/JsApi",
                                     data: {
                                         Id:@Model.Id,
                                         Receiver: name,
