--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd/mobileinfo.cshtml
@@ -24,13 +24,13 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1667359354378253");
+        })(window, document, "script", "1661318015460365");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="https://hllf25.zitiaonc.com:4422/webapp/xdd2/Index"></a>
+        <a href="https://mwd.gzjxwlkj.cn:8022/webapp/mwd/index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
@@ -109,10 +109,10 @@
         $(function () {
             $('#submit').bind('click', function () {
                 if (isWeiXin()) {
-                    location.href = '/webapp/xdd2/jsapi/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
+                    location.href = '/webapp/mwd/jsapi/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
                 }
                 else {
-                    location.href = '/webapp/xdd2/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
+                    location.href = '/webapp/mwd/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
                 }
             });
         })
