--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd2/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd2/express.cshtml
@@ -23,14 +23,14 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1667359354378253");
+        })(window, document, "script", "1661318015972359");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="https://hllf25.zitiaonc.com:4422/webapp/xdd2/index"></a>
+            <a href="https://mwd.gzjxwlkj.cn:8023/webapp/mwd2/index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
