修改shop里面的跳转错误shop2

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileinfo.cshtml
@@ -31,7 +31,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/shop2/index"></a>
+        <a href="/webapp/shop/index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
