1.OrdersService如果购买靓号和联系电话为同一个人订单，在原订单基础上修改，不再创建新的订单GetEntityByContactTel 2.支付宝异步回调AliPayNotifyUrl判断trade_status== "TRADE_SUCCESS" 3.微信支付PayType="JsApi"

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileinfo.cshtml
@@ -31,7 +31,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/shop/index"></a>
+        <a href="https://www.jnlxsm.net:447/webapp/Shop/Index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
