--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/express.cshtml
@@ -31,7 +31,7 @@
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="/webapp/shop/index"></a>
+            <a href="https://www.jnlxsm.net:447/webapp/Shop/Index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
