--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/Shop/mobileorder.cshtml
@@ -37,7 +37,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/shop/mobileinfo/@ViewBag.id"><i class="-back"></i></a>
+        <a href="/webapp/shop/mobileinfo/@ViewBag.id?host={@ViewBag.host}"><i class="-back"></i></a>
         <h1>号码订购</h1>
     </div>
     <div class="weui-cells__title">
