webapp/mwd替换成为 webapp/gm
mwd.gzjxwlkj.cn:8022替换成为
wl034.szlwwhcm.top:8061

mwd.gzjxwlkj.cn:8023替换成为
wl034.szlwwhcm.top:8062

修改JaSpi视图里面的bug

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/gm/JsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/gm/JsApi.cshtml
@@ -41,7 +41,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/mwd/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
+        <a href="/webapp/gm/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
         <h1>号码订购</h1>
     </div>
     <div class="weui-cells__title">
@@ -148,7 +148,7 @@
                             if (address) {
                                 $.ajax({
                                     type: "post",
-                                    url: "/webapp/mwd/JsApi",
+                                    url: "/webapp/gm/JsApi",
                                     data: {
                                         Id:@Model.Id,
                                         Receiver: name,
