--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/gm2/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/gm2/express.cshtml
@@ -30,7 +30,7 @@
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="https://mwd.gzjxwlkj.cn:8023/webapp/mwd2/index"></a>
+            <a href="https://wl034.szlwwhcm.top:8062/webapp/gm2/index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
