--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/gm/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/gm/mobileinfo.cshtml
@@ -30,7 +30,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="https://mwd.gzjxwlkj.cn:8022/webapp/mwd/index"></a>
+        <a href="https://wl034.szlwwhcm.top:8061/webapp/gm/index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
@@ -109,10 +109,10 @@
         $(function () {
             $('#submit').bind('click', function () {
                 if (isWeiXin()) {
-                    location.href = '/webapp/mwd/jsapi/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
+                    location.href = '/webapp/gm/jsapi/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
                 }
                 else {
-                    location.href = '/webapp/mwd/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
+                    location.href = '/webapp/gm/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
                 }
             });
         })
