--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd2/JsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/mwd2/JsApi.cshtml
@@ -41,7 +41,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/xdd2/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
+        <a href="/webapp/mwd2/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
         <h1>号码订购</h1>
     </div>
     <div class="weui-cells__title">
@@ -148,7 +148,7 @@
                             if (address) {
                                 $.ajax({
                                     type: "post",
-                                    url: "/webapp/xdd2/JsApi",
+                                    url: "/webapp/mwd2/JsApi",
                                     data: {
                                         Id:@Model.Id,
                                         Receiver: name,
