济南头条替换js代码

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/express.cshtml
@@ -23,20 +23,20 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1668011726648334");
+        })(window, document, "script", "1668366489832456");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="https://wl034.szlwwhcm.top:8061/webapp/gm/index"></a>
+            <a href="https://shop.jnlxsm.net:8063/webapp/jinan/index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
             <input placeholder="请输入购买的手机号" id="mobile" type="number" value="" class="land-input phone">
             <div class="page-btn" style="padding: 0; margin-top: 10px;">
-                <a href="#" data-url="/webapp/gm/express?mobile=mobileval" id="search-submit" class="weui-btn" style="background: #ee5246;">立即查询</a>
+                <a href="#" data-url="/webapp/jinan/express?mobile=mobileval" id="search-submit" class="weui-btn" style="background: #ee5246;">立即查询</a>
             </div>
             <div class='jieguo' style="display:@ViewBag.display"><p><strong>查询结果</strong></p><p>@ViewBag.msg</p></div>
 
