--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/mobileorder.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/mobileorder.cshtml
@@ -30,13 +30,13 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1668011726648334");
+        })(window, document, "script", "1668366489832456");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/gm/mobileinfo/@ViewBag.id?host=@ViewBag.host"><i class="-back"></i></a>
+        <a href="/webapp/jinan/mobileinfo/@ViewBag.id?host=@ViewBag.host"><i class="-back"></i></a>
         <h1>号码订购</h1>
     </div>
     <div class="weui-cells__title">
@@ -163,7 +163,7 @@
                             if (address) {
                                 $.ajax({
                                     type: "post",
-                                    url: "/webapp/gm/ajaxorder",
+                                    url: "/webapp/jinan/ajaxorder",
                                     data: {
                                         TelphoneID: id,
                                         Receiver: name,
@@ -188,7 +188,7 @@
 
                                         if (resObj.status) {
                                             //头条推广转化（点击支付）
-                                            meteor.track("form", { convert_id: "1668279538275405" })
+                                            meteor.track('form', { convert_id: 1668438784652296 })
                                             //不做处理，跳转
                                             if (resObj.data.target) {
                                                 location.href = resObj.data.gotoUrl;
@@ -216,7 +216,7 @@
                                                     text: qrsrc,
                                                     buttons: [
                                                         { text: "取消支付", className: "default", onClick: function () { $.hideLoading(); } },
-                                                        { text: "支付完成", onClick: function () { location.href = '/webapp/gm/paymentFinish/' + resObj.data.payid; } }
+                                                        { text: "支付完成", onClick: function () { location.href = '/webapp/jinan/paymentFinish/' + resObj.data.payid; } }
                                                     ]
                                                 });
                                                 //检测付款状态
