--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/JsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/JsApi.cshtml
@@ -35,13 +35,13 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1668011726648334");
+        })(window, document, "script", "1668366489832456");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="/webapp/gm/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
+        <a href="/webapp/jinan/mobileinfo/@Model.TelphoneID"><i class="-back"></i></a>
         <h1>号码订购</h1>
     </div>
     <div class="weui-cells__title">
@@ -148,7 +148,7 @@
                             if (address) {
                                 $.ajax({
                                     type: "post",
-                                    url: "/webapp/gm/JsApi",
+                                    url: "/webapp/jinan/JsApi",
                                     data: {
                                         Id:@Model.Id,
                                         Receiver: name,
@@ -163,7 +163,7 @@
                                     success: function (resObj) {
                                         if (resObj.status) {
                                             //头条推广转化（点击支付）
-                                            meteor.track("form", { convert_id: "1667736631584772" })
+                                            meteor.track('form', { convert_id: 1668438784652296 })
 
                                                 //JSApi支付
                                                 WeixinJSBridge.invoke(
