--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/mobileinfo.cshtml
@@ -24,13 +24,13 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1668011726648334");
+        })(window, document, "script", "1668366489832456");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="https://wl034.szlwwhcm.top:8061/webapp/gm/index"></a>
+        <a href="https://shop.jnlxsm.net:8063/webapp/jinan/index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
@@ -109,10 +109,10 @@
         $(function () {
             $('#submit').bind('click', function () {
                 if (isWeiXin()) {
-                    location.href = '/webapp/gm/jsapi/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
+                    location.href = '/webapp/jinan/jsapi/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
                 }
                 else {
-                    location.href = '/webapp/gm/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
+                    location.href = '/webapp/jinan/mobileorder/@Model.TelphoneID?Tel=@Model.Telphone&Price=@Model.Price&host=@ViewBag.host';
                 }
             });
         })
