--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/paymentFinish.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/paymentFinish.cshtml
@@ -33,7 +33,7 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1668011726648334");
+        })(window, document, "script", "1668366489832456");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
@@ -58,7 +58,7 @@
             </div>
             <div class="weui-msg__opr-area" style="display:@ViewBag.display">
                 <p class="weui-btn-area">
-                    <a href="/webapp/gm/mobileorder/@ViewBag.TelphoneID?Tel=@ViewBag.Tel&Price=@ViewBag.Price&host=@ViewBag.Host" class="weui-btn weui-btn_warn">重新支付</a>
+                    <a href="/webapp/jinan/mobileorder/@ViewBag.TelphoneID?Tel=@ViewBag.Tel&Price=@ViewBag.Price&host=@ViewBag.Host" class="weui-btn weui-btn_warn">重新支付</a>
                 </p>
             </div>
         </div>
