--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/express.cshtml
@@ -23,14 +23,14 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1668011877567496");
+        })(window, document, "script", "1668530965859335");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="https://shop.jnlxsm.net:8064/webapp/gm2/index"></a>
+            <a href="https://shop.jnlxsm.net:8064/webapp/jinan2/index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
