shop.jnlxsm.net:8063改成www.jnlxsm.net:8063

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/mobileinfo.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan/mobileinfo.cshtml
@@ -30,7 +30,7 @@
 </head>
 <body class="page">
     <div class="page-title">
-        <a href="https://shop.jnlxsm.net:8063/webapp/jinan/index"></a>
+        <a href="https://www.jnlxsm.net:8063/webapp/jinan/index"></a>
         <h1>号码详情</h1>
     </div>
     <div class="page-box">
