--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/express.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/jinan2/express.cshtml
@@ -30,7 +30,7 @@
 <body>
     <div class="express">
         <div class="express-back">
-            <a href="https://shop.jnlxsm.net:8064/webapp/jinan2/index"></a>
+            <a href="https://www.jnlxsm.net:8064/webapp/jinan2/index"></a>
         </div>
         <h1 class="express-h1">快递查询</h1>
         <div class="express-box">
