--- a/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/gm/JsApi.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/webapp/Views/gm/JsApi.cshtml
@@ -35,7 +35,7 @@
                 js.src = "https://analytics.snssdk.com/meteor.js/v1/" + l + "/sdk"; fjs.parentNode.insertBefore(js, fjs)
             }; meteor.load(); if (meteor.invoked) { return }
             meteor.invoked = true; meteor.track("pageview")
-        })(window, document, "script", "1668011726648334");
+        })(window, document, "script", "1668012696985607");
     </script>
     <!-- End Bytedance Tracking -->
 </head>
@@ -163,7 +163,7 @@
                                     success: function (resObj) {
                                         if (resObj.status) {
                                             //头条推广转化（点击支付）
-                                            meteor.track("form", { convert_id: "1667736631584772" })
+                                            meteor.track('form', { convert_id: 1668622719711245 })
 
                                                 //JSApi支付
                                                 WeixinJSBridge.invoke(
