添加号段，城市必填 号码详情页和订单页合并一个页面，仿照得时靓号https://www.dslianghao.com/product/119808.html?channel=weipi_douyin3 gm,mwd2,广州广末两个，修改订单下单from加引号 jinan,jinan2,shop济南三个

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/BaseManage/Views/TelphoneData/TelphoneDataForm.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/BaseManage/Views/TelphoneData/TelphoneDataForm.cshtml
@@ -88,8 +88,8 @@
             <td class="formValue">
                 <div id="ProvinceId" type="select" class="ui-select" style="float: left; width: 180px; margin-right: 1px;"></div>
                 <div id="CityId" type="select" class="ui-select" style="float: left; width: 180px; margin-right: 1px;"></div>
-                <input id="Province" type="hidden" class="form-control" />
-                <input id="City" type="hidden" class="form-control" />
+                <input id="Province" type="hidden" class="form-control"  isvalid="yes" checkexpession="NotNull"/>
+                <input id="City" type="hidden" class="form-control"  isvalid="yes" checkexpession="NotNull"/>
             </td>
         </tr>
         <tr>
