替换图片里面的“得时”改为“号运来” 订单列表添加“区”

--- a/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
+++ b/HZSoft.Application/HZSoft.Application.Web/Areas/CustomerManage/Views/Orders/OrdersIndex.cshtml
@@ -69,7 +69,7 @@
                 { label: '联系电话', name: 'ContactTel', index: 'ContactTel', width: 100, align: 'center',sortable: true  },
                 { label: '省', name: 'Province', index: 'Province', width: 100, align: 'center',sortable: true  },
                 { label: '市', name: 'City', index: 'City', width: 100, align: 'center',sortable: true  },
-                //{ label: '区', name: 'Country', index: 'Country', width: 100, align: 'center',sortable: true  },
+                { label: '区', name: 'Country', index: 'Country', width: 100, align: 'center',sortable: true  },
                 { label: '详细地址', name: 'Address', index: 'Address', width: 200, align: 'left',sortable: true  },
                 { label: '发货人', name: 'DeliveryName', index: 'DeliveryName', width: 100, align: 'center',sortable: true  },
                 { label: '发货时间', name: 'DeliveryDate', index: 'DeliveryDate', width: 80, align: 'left',sortable: true  },
